documentation updates for 4.0